--- a/index.html
+++ b/index.html
@@ -3,9 +3,131 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="img/Hoja_De_Vida.png">
+    <title>Hoja de vida Jorge Osorio</title>
 </head>
 <body>
-    
+    <img src="img/Foto_Perfil.png" alt="Foto_Perfil">
+    <h1>Informacion personal:</h1>
+    <table>
+        <tr>
+            <th>Nombre:</th>
+            <th>Jorge Luis Osorio Silva</th>
+        </tr>
+        <tr>
+            <th>Direccion:</th>
+            <th>Cra. 12 #200-14, Floridablanca</th>
+        </tr>
+        <tr>
+            <th>Email:</th>
+            <th>kingshadowowls@gmail.com</th>
+        </tr>
+        <tr>
+                <th>Link Git:</th>
+                <th><a href="https://github.com/KingOwls" target="_blank">KingOwls</a></th>
+        </tr>
+        <tr>
+            <th>Link Linkeid:</th>
+            <th>Ausente</th>
+        </tr>
+    </table>
+    <h2>Informacion Academica:</h2>
+    <table>
+        <tr>
+            <th>Bachillerato:</th>
+            <th>Seminario Menor San Pio X</th>
+        </tr>
+        <tr>
+            <th>Cursos:</th>
+            <th>Curso de introduccion al desarrollo de videojuegos</th>
+        </tr>
+        <tr>
+            <th>Actualidad:</th>
+            <th>Estudiando Ingeniera en sistemas e informatica</th>
+        </tr>
+    </table>
+    </table>
+    <h3>Habilidaes</h3>
+    <table>
+        <tr>
+            <th colspan="4">Strack Tecnologico:</th>
+        </tr>
+        <tr>
+            <th><img class="imgskills" src="img/Python.png" alt="Python"></th>
+            <th><img class="imgskills" src="img/Java.png" alt="Java"></th>
+            <th><img class="imgskills" src="img/Cpp.png" alt="Cpp" ></th>
+            <th>Planteamiento y especificacion de requerimientos</th>
+        </tr>
+        <tr>
+            <th><img class="imgNote" src="img/Calificacion.png" alt="Calificacion"><img class="imgNote" src="img/Calificacion.png" alt="Calificacion"><img class="imgNote" src="img/Calificacion.png" alt="Calificacion"><img class="imgNote" src="img/Calificacion.png" alt="Calificacion"></th>
+            <th><img class="imgNote" src="img/Calificacion.png" alt="Calificacion"><img class="imgNote" src="img/Calificacion.png" alt="Calificacion"><img class="imgNote" src="img/Calificacion.png" alt="Calificacion"></th>
+            <th><img class="imgNote" src="img/Calificacion.png" alt="Calificacion"><img class="imgNote" src="img/Calificacion.png" alt="Calificacion"><img class="imgNote" src="img/Calificacion.png" alt="Calificacion"></th>
+            <th><img class="imgNote" src="img/Calificacion.png" alt="Calificacion"><img class="imgNote" src="img/Calificacion.png" alt="Calificacion"><img class="imgNote" src="img/Calificacion.png" alt="Calificacion"><img class="imgNote" src="img/Calificacion.png" alt="Calificacion"></th>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <th colspan="3">Otras habilidades</th>
+        </tr>
+        <tr>
+            <th><img img class="imgskills" src="img/Escritor.png" alt="Escritor"></th>
+            <th>Autor de Algunos Libros</th>
+            <th>Escritor de Symphony of Justice</th>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <th colspan="7">Libros escritos</th>
+        </tr>
+        <tr>
+            <th>Arcanus Codex</th>
+            <th>El diaro antes del momento final</th>
+            <th>Universidad di Eris & Atenea</th>
+            <th>El canto mayor de los cuervos</th>            
+            <th>El amor de las aves</th>
+            <th>Arcane New Story</th>            
+            <th>La dulce orquidea blanca y el viejo cuervo</th>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <th colspan="2">proyectos personales</th>
+        </tr>
+        <tr>
+            <th><a href="https://github.com/KingOwls/Symphony-of-Justice" target="_blank">Symphony Of Justice</a></th>
+            <th><a href="https://github.com/KingOwls/FuncionamientoDeMemoria2022" target="_blank">Juego de memoria</a></th>
+        </tr>
+    </table>
+    <table>
+        <tr>
+            <th>Proyectos Empresariales:</th>
+        </tr>
+        <tr>
+            <th>Ninguno</th>
+        </tr>
+    </table>  
+    <h3>Contacto:</h3>
+    <table>
+        <tr>
+            <th>Nombre:</th>
+            <th>Jorge Luis Osorio Silva</th>
+        </tr>
+        <tr>
+            <th><img class="imgContact" src="img/Gmail.png" alt="Gmail"></th>
+            <th>kingshadowowls@gmail.com</th>
+        </tr>
+        <tr>
+            <th><img class="imgContact" src="img/Discord.png" alt="Discord"></th>
+            <th>raiko_owls</th>
+        </tr>
+        <tr>
+            <th><img class="imgContact" src="img/Cellphone.png" alt="Celular"></th>
+            <th>316-2284286</th>
+        </tr>
+    </table>
+    <a href="https://www.wattpad.com/user/Cuervo_Maestro" target="_blank"> <img class="imgskills" src="img/Wattpad.png" alt="Logo de Wattpad"></a>
+    <a href="https://github.com/KingOwls" target="_blank"><img class="imgskills" src="img/GitHub.png" alt="Logo de Wattpad"></a>
+        
 </body>
 </html>
