--- a/index.html
+++ b/index.html
@@ -131,3 +131,21 @@
         
 </body>
 </html>
+
+<!--Configuracion de las estadisticas-->
+<!--Primera tabla agregar el cuervo en alguna de las ezquinas-->
+
+<!--Segunda tabla buscar iconos para acompáñar el diseño, como el de ingenieria y curso-->
+<!--Stacks tecnologicos agregarlo en un cambio de lista para verlo en lateral y hacer mas pequeño el de las especificaciones -->
+
+<!--Librtos, buscar las portadas y colocarlas junto con fecha de creacion-->
+<!-- Agregar otro cuervo en contacto -->
+
+<!-- Colocar los 3 fondos dependiendo de la presentacion o el tamaño de la misma -->
+<!-- Ajustar los titulos y Subtitulos -->
+
+<!--Ubicar las direcciones de wattpad y de git en un lugar especifico -->
+<!--Agregar la portada de mi git, y el icono de wattpad -->
+<!-- Agregar una foto de perfil -->
+
+<!-- Hacer las presentaciones en las separaciones correspondientes-->
